--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
-envlist = py38
+envlist = py39,py38,py37,py27
+skip_missing_interpreters = true
 [testenv]
 # install testing framework
 # ... or install anything else you might need here
