--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py39,py38,py37,py27
+envlist = py310,py39,py38,py37,py27
 skip_missing_interpreters = true
 [testenv]
 # install testing framework
